# PEA2

./: .gitignore  CMakeLists.txt
kod/: przyklad.cfg
kod/apps/: app_common.cpp  app_common.h  app_plain_common.cpp  app_plain_common.h  main.cpp  main_bestfs.cpp  main_bfs.cpp  main_bnb_plain.cpp  main_dfs.cpp  main_plain_bestfs_ub_inf.cpp  main_plain_bestfs_ub_rnn.cpp  main_plain_bfs_ub_inf.cpp  main_plain_bfs_ub_rnn.cpp  main_plain_dfs_ub_inf.cpp  main_plain_dfs_ub_rnn.cpp
kod/bnb/: bnb_node.h  bnb_plain_solver.cpp  bnb_plain_solver.h  bnb_solver.cpp  bnb_solver.h  lb.cpp  lb.h  ub.cpp  ub.h
kod/common/: config.h  config_parser.cpp  config_parser.h  instance_loader.cpp  instance_loader.h  reader.cpp  reader.h  reader_matrix.cpp  reader_matrix.h  tsp_instance.h  utils.cpp  utils.h  writer.cpp  writer.h
kod/strategies/: bestfs_frontier.h  bfs_frontier.h  dfs_frontier.h  search_strategy.h
